# senvx

./: .gitignore  README.md  conda_env.lock.json  pyproject.toml
.github/workflows/: senvx-test.yml  senvx.yml
senvx/: common.py  constants.py  install.py  main.py
senvx/tests/: conftest.py
senvx/tests/integration/: test_install.py
senvx/tests/unit/: test_install.py
