[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "senvx"
version = "0.0.2"
description = "Package installer and consumer for Senv (Super Environment), a tool to simplify dependency management, packaging, distribution, and consumption of your applications and libraries."
authors = ["Jorge <jorge.girazabal@gmail.com>"]
readme = "README.md"
homepage = "https://JorgeGarciaIrazabal.github.io/senv"


[tool.senv]
conda-channels = [
    "conda-forge",
    "defaults"
]
build-system = "conda"


[tool.poetry.scripts]
senvx = 'senvx.main:app'

[tool.poetry.dependencies]
python = ">3.7.0, <3.10.0"
ensureconda = "^1.4.0"
appdirs = "^1.4.4"
typer = "^0.3.2"
pydantic = "^1.7.3"


[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"
pytest = "^6.2.1"
pytest-mock = "^3.4.0"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.2.0"

